--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Cache poisonong test</title>
 </head>
 <body>
-    Cache poisonong test
+    Cache poisonong test, XSS
+    <script type="text/javascript">
+alert(document.cookie);
+</script>    
 </body>
 </html>
